[gd_scene load_steps=19 format=2]

[ext_resource path="res://scenes/game/credits.gd" type="Script" id=1]
[ext_resource path="res://resources/textures/credits/credits_aleocus.png" type="Texture" id=3]
[ext_resource path="res://scenes/objects/ui/button.tscn" type="PackedScene" id=4]
[ext_resource path="res://resources/music/credits body.mp3" type="AudioStream" id=5]
[ext_resource path="res://resources/textures/credits/bg_top.png" type="Texture" id=6]
[ext_resource path="res://resources/textures/credits/bg_bottom.png" type="Texture" id=7]
[ext_resource path="res://resources/textures/credits/bg_center.png" type="Texture" id=8]
[ext_resource path="res://resources/textures/credits/credits_button.png" type="Texture" id=15]
[ext_resource path="res://resources/fonts/m5x7.ttf" type="DynamicFontData" id=16]
[ext_resource path="res://resources/textures/credits/Plank.png" type="Texture" id=17]

[sub_resource type="DynamicFont" id=5]
size = 30
outline_size = 1
font_data = ExtResource( 16 )

[sub_resource type="DynamicFont" id=7]
size = 28
outline_size = 1
outline_color = Color( 0.788235, 0.811765, 0.560784, 0.262745 )
font_data = ExtResource( 16 )

[sub_resource type="DynamicFont" id=8]
size = 39
font_data = ExtResource( 16 )

[sub_resource type="DynamicFont" id=1]
size = 26
font_data = ExtResource( 16 )

[sub_resource type="DynamicFont" id=6]
size = 39
font_data = ExtResource( 16 )

[sub_resource type="DynamicFont" id=9]
size = 21
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 16 )

[sub_resource type="Animation" id=3]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("GameBy:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Camera2D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Back:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=4]
resource_name = "main"
length = 76.0
step = 1.0
tracks/0/type = "value"
tracks/0/path = NodePath("GameBy:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Camera2D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 7, 60 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, 0 ), Vector2( 0, 2700 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Back:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 60, 65 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[node name="Credits" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="Background" type="VBoxContainer" parent="."]
margin_right = 40.0
margin_bottom = 40.0
custom_constants/separation = 0

[node name="Top" type="TextureRect" parent="Background"]
margin_right = 320.0
margin_bottom = 180.0
texture = ExtResource( 6 )

[node name="Center" type="TextureRect" parent="Background"]
margin_top = 180.0
margin_right = 320.0
margin_bottom = 360.0
texture = ExtResource( 8 )

[node name="Center2" type="TextureRect" parent="Background"]
margin_top = 360.0
margin_right = 320.0
margin_bottom = 540.0
texture = ExtResource( 8 )

[node name="Center3" type="TextureRect" parent="Background"]
margin_top = 540.0
margin_right = 320.0
margin_bottom = 720.0
texture = ExtResource( 8 )

[node name="Center4" type="TextureRect" parent="Background"]
margin_top = 720.0
margin_right = 320.0
margin_bottom = 900.0
texture = ExtResource( 8 )

[node name="Center5" type="TextureRect" parent="Background"]
margin_top = 900.0
margin_right = 320.0
margin_bottom = 1080.0
texture = ExtResource( 8 )

[node name="Center6" type="TextureRect" parent="Background"]
margin_top = 1080.0
margin_right = 320.0
margin_bottom = 1260.0
texture = ExtResource( 8 )

[node name="Center7" type="TextureRect" parent="Background"]
margin_top = 1260.0
margin_right = 320.0
margin_bottom = 1440.0
texture = ExtResource( 8 )

[node name="Center8" type="TextureRect" parent="Background"]
margin_top = 1440.0
margin_right = 320.0
margin_bottom = 1620.0
texture = ExtResource( 8 )

[node name="Center9" type="TextureRect" parent="Background"]
margin_top = 1620.0
margin_right = 320.0
margin_bottom = 1800.0
texture = ExtResource( 8 )

[node name="Center10" type="TextureRect" parent="Background"]
margin_top = 1800.0
margin_right = 320.0
margin_bottom = 1980.0
texture = ExtResource( 8 )

[node name="Center11" type="TextureRect" parent="Background"]
margin_top = 1980.0
margin_right = 320.0
margin_bottom = 2160.0
texture = ExtResource( 8 )

[node name="Center12" type="TextureRect" parent="Background"]
margin_top = 2160.0
margin_right = 320.0
margin_bottom = 2340.0
texture = ExtResource( 8 )

[node name="Center13" type="TextureRect" parent="Background"]
margin_top = 2340.0
margin_right = 320.0
margin_bottom = 2520.0
texture = ExtResource( 8 )

[node name="Center14" type="TextureRect" parent="Background"]
margin_top = 2520.0
margin_right = 320.0
margin_bottom = 2700.0
texture = ExtResource( 8 )

[node name="Bottom" type="TextureRect" parent="Background"]
margin_top = 2700.0
margin_right = 320.0
margin_bottom = 2880.0
texture = ExtResource( 7 )

[node name="GameBy" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -176.0
margin_top = -4.0
margin_right = 176.0
margin_bottom = 47.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 1, 1, 1, 1 )
custom_constants/shadow_offset_x = 1
custom_constants/shadow_offset_y = 1
custom_fonts/font = SubResource( 5 )
text = "A Game By
Saultoons Surprise Squad"
align = 1

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 182.0
margin_bottom = 1326.0
custom_constants/margin_right = 40
custom_constants/margin_left = 40

[node name="Credits" type="VBoxContainer" parent="MarginContainer"]
margin_left = 40.0
margin_right = 280.0
margin_bottom = 2605.0
size_flags_horizontal = 5
custom_constants/separation = 26

[node name="Party Planners" type="VBoxContainer" parent="MarginContainer/Credits"]
margin_right = 240.0
margin_bottom = 228.0

[node name="Plank" type="TextureRect" parent="MarginContainer/Credits/Party Planners"]
margin_left = 67.0
margin_right = 172.0
margin_bottom = 24.0
size_flags_horizontal = 6
texture = ExtResource( 17 )

[node name="Label" type="Label" parent="MarginContainer/Credits/Party Planners/Plank"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -70.0
margin_top = -11.5
margin_right = 70.0
margin_bottom = 11.5
custom_colors/font_color = Color( 0.789075, 0.81, 0.5589, 1 )
custom_fonts/font = SubResource( 7 )
text = "Party Planners"
align = 1

[node name="Aleocius" type="TextureRect" parent="MarginContainer/Credits/Party Planners"]
margin_left = 37.0
margin_top = 28.0
margin_right = 203.0
margin_bottom = 77.0
size_flags_horizontal = 6
texture = ExtResource( 3 )

[node name="Label" type="Label" parent="MarginContainer/Credits/Party Planners/Aleocius"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -55.5
margin_top = -18.5
margin_right = 55.5
margin_bottom = 18.5
custom_fonts/font = SubResource( 8 )
text = "Aleiocus"
align = 1
valign = 1

[node name="Label" type="Label" parent="MarginContainer/Credits/Party Planners"]
margin_top = 81.0
margin_right = 240.0
margin_bottom = 228.0
custom_fonts/font = SubResource( 1 )
text = "Colorful Frog
KatieDooLally
LinuxGamer
Mokumokuren
npkate
NTCM"
align = 1

[node name="Ideas And Consepts" type="VBoxContainer" parent="MarginContainer/Credits"]
margin_top = 254.0
margin_right = 240.0
margin_bottom = 629.0

[node name="Plank" type="TextureRect" parent="MarginContainer/Credits/Ideas And Consepts"]
margin_left = 67.0
margin_right = 172.0
margin_bottom = 24.0
size_flags_horizontal = 6
texture = ExtResource( 17 )

[node name="Label" type="Label" parent="MarginContainer/Credits/Ideas And Consepts/Plank"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -89.5
margin_top = -11.5
margin_right = 89.5
margin_bottom = 11.5
custom_colors/font_color = Color( 0.789075, 0.81, 0.5589, 1 )
custom_fonts/font = SubResource( 7 )
text = "Ideas and Concepts"
align = 1

[node name="Label" type="Label" parent="MarginContainer/Credits/Ideas And Consepts"]
margin_top = 28.0
margin_right = 240.0
margin_bottom = 375.0
custom_fonts/font = SubResource( 1 )
text = "Vgamer
AddinSachen
Dissonant-Void
Aleiocus
jsalex7
Volcanojungle
Zappyz
Fourthpage
Leâ€™Liam
Isit0r
devuan03
Cheeze_addict
RisingDarkness
SleepingYellowCreature"
align = 1

[node name="Character Art" type="VBoxContainer" parent="MarginContainer/Credits"]
margin_top = 655.0
margin_right = 240.0
margin_bottom = 780.0

[node name="Plank" type="TextureRect" parent="MarginContainer/Credits/Character Art"]
margin_left = 67.0
margin_right = 172.0
margin_bottom = 24.0
size_flags_horizontal = 6
texture = ExtResource( 17 )

[node name="Label" type="Label" parent="MarginContainer/Credits/Character Art/Plank"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -69.0
margin_top = -11.5
margin_right = 69.0
margin_bottom = 11.5
custom_colors/font_color = Color( 0.789075, 0.81, 0.5589, 1 )
custom_fonts/font = SubResource( 7 )
text = "Character Art"
align = 1

[node name="Label" type="Label" parent="MarginContainer/Credits/Character Art"]
margin_top = 28.0
margin_right = 240.0
margin_bottom = 125.0
custom_fonts/font = SubResource( 1 )
text = "VGamer
LavraSource
jsalex7
Isit0r"
align = 1

[node name="Original Character" type="VBoxContainer" parent="MarginContainer/Credits"]
margin_top = 806.0
margin_right = 240.0
margin_bottom = 1181.0

[node name="Plank" type="TextureRect" parent="MarginContainer/Credits/Original Character"]
margin_left = 67.0
margin_right = 172.0
margin_bottom = 24.0
size_flags_horizontal = 6
texture = ExtResource( 17 )

[node name="Label" type="Label" parent="MarginContainer/Credits/Original Character/Plank"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -84.0
margin_top = -24.5
margin_right = 84.0
margin_bottom = 24.5
custom_colors/font_color = Color( 0.789075, 0.81, 0.5589, 1 )
custom_fonts/font = SubResource( 7 )
text = "Original Character
Design"
align = 1

[node name="Label" type="Label" parent="MarginContainer/Credits/Original Character"]
margin_top = 28.0
margin_right = 240.0
margin_bottom = 375.0
custom_fonts/font = SubResource( 1 )
text = "Aleiocus
Isit0r
LavraSource
Dissonant-Void
Le'Liam
GML
SleepingYellowCreature
devuan03
AddinSachen
Junkuza
Pencroo
CrimsoneArt
jsalex7
Derpo"
align = 1

[node name="Assets Art" type="VBoxContainer" parent="MarginContainer/Credits"]
margin_top = 1207.0
margin_right = 240.0
margin_bottom = 1407.0

[node name="Plank" type="TextureRect" parent="MarginContainer/Credits/Assets Art"]
margin_left = 67.0
margin_right = 172.0
margin_bottom = 24.0
size_flags_horizontal = 6
texture = ExtResource( 17 )

[node name="Label" type="Label" parent="MarginContainer/Credits/Assets Art/Plank"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -78.0
margin_top = -11.5
margin_right = 78.0
margin_bottom = 11.5
custom_colors/font_color = Color( 0.789075, 0.81, 0.5589, 1 )
custom_fonts/font = SubResource( 7 )
text = "Assets Art"
align = 1

[node name="Label" type="Label" parent="MarginContainer/Credits/Assets Art"]
margin_top = 28.0
margin_right = 240.0
margin_bottom = 200.0
custom_fonts/font = SubResource( 1 )
text = "AddinSachen
VGamer
Aleiocus
LavraSource
Zappyz
devuan03
Isit0r"
align = 1

[node name="Background N Environnement" type="VBoxContainer" parent="MarginContainer/Credits"]
margin_top = 1433.0
margin_right = 240.0
margin_bottom = 1583.0

[node name="Plank" type="TextureRect" parent="MarginContainer/Credits/Background N Environnement"]
margin_left = 67.0
margin_right = 172.0
margin_bottom = 24.0
size_flags_horizontal = 6
texture = ExtResource( 17 )

[node name="Label" type="Label" parent="MarginContainer/Credits/Background N Environnement/Plank"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -73.0
margin_top = -22.5
margin_right = 73.0
margin_bottom = 22.5
custom_colors/font_color = Color( 0.789075, 0.81, 0.5589, 1 )
custom_constants/line_spacing = -4
custom_fonts/font = SubResource( 7 )
text = "Background and
Environment"
align = 1

[node name="Label" type="Label" parent="MarginContainer/Credits/Background N Environnement"]
margin_top = 28.0
margin_right = 240.0
margin_bottom = 150.0
custom_fonts/font = SubResource( 1 )
text = "VGamer
AddinSachen
Isit0r
Aleiocus
lemms"
align = 1

[node name="Animation" type="VBoxContainer" parent="MarginContainer/Credits"]
margin_top = 1609.0
margin_right = 240.0
margin_bottom = 1734.0

[node name="Plank" type="TextureRect" parent="MarginContainer/Credits/Animation"]
margin_left = 67.0
margin_right = 172.0
margin_bottom = 24.0
size_flags_horizontal = 6
texture = ExtResource( 17 )

[node name="Label" type="Label" parent="MarginContainer/Credits/Animation/Plank"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -78.0
margin_top = -11.5
margin_right = 78.0
margin_bottom = 11.5
custom_colors/font_color = Color( 0.789075, 0.81, 0.5589, 1 )
custom_fonts/font = SubResource( 7 )
text = "Animation"
align = 1

[node name="Label" type="Label" parent="MarginContainer/Credits/Animation"]
margin_top = 28.0
margin_right = 240.0
margin_bottom = 125.0
custom_fonts/font = SubResource( 1 )
text = "AddinSachen
Aleiocus
VGamer
Zappyz"
align = 1

[node name="Programming" type="VBoxContainer" parent="MarginContainer/Credits"]
margin_top = 1760.0
margin_right = 240.0
margin_bottom = 1835.0

[node name="Plank" type="TextureRect" parent="MarginContainer/Credits/Programming"]
margin_left = 67.0
margin_right = 172.0
margin_bottom = 24.0
size_flags_horizontal = 6
texture = ExtResource( 17 )

[node name="Label" type="Label" parent="MarginContainer/Credits/Programming/Plank"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -69.0
margin_top = -11.5
margin_right = 69.0
margin_bottom = 11.5
custom_colors/font_color = Color( 0.789075, 0.81, 0.5589, 1 )
custom_fonts/font = SubResource( 7 )
text = "Programming"
align = 1

[node name="Label" type="Label" parent="MarginContainer/Credits/Programming"]
margin_top = 28.0
margin_right = 240.0
margin_bottom = 75.0
custom_fonts/font = SubResource( 1 )
text = "Dissonant-Void
jsalex7"
align = 1

[node name="Music" type="VBoxContainer" parent="MarginContainer/Credits"]
margin_top = 1861.0
margin_right = 240.0
margin_bottom = 1911.0

[node name="Plank" type="TextureRect" parent="MarginContainer/Credits/Music"]
margin_left = 67.0
margin_right = 172.0
margin_bottom = 24.0
size_flags_horizontal = 6
texture = ExtResource( 17 )

[node name="Label" type="Label" parent="MarginContainer/Credits/Music/Plank"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -78.0
margin_top = -11.5
margin_right = 78.0
margin_bottom = 11.5
custom_colors/font_color = Color( 0.789075, 0.81, 0.5589, 1 )
custom_fonts/font = SubResource( 7 )
text = "Music"
align = 1

[node name="Label" type="Label" parent="MarginContainer/Credits/Music"]
margin_top = 28.0
margin_right = 240.0
margin_bottom = 50.0
custom_fonts/font = SubResource( 1 )
text = "Dissonant-Void"
align = 1

[node name="Audio" type="VBoxContainer" parent="MarginContainer/Credits"]
margin_top = 1937.0
margin_right = 240.0
margin_bottom = 2087.0

[node name="Plank" type="TextureRect" parent="MarginContainer/Credits/Audio"]
margin_left = 67.0
margin_right = 172.0
margin_bottom = 24.0
size_flags_horizontal = 6
texture = ExtResource( 17 )

[node name="Label" type="Label" parent="MarginContainer/Credits/Audio/Plank"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -78.0
margin_top = -11.5
margin_right = 78.0
margin_bottom = 11.5
custom_colors/font_color = Color( 0.789075, 0.81, 0.5589, 1 )
custom_fonts/font = SubResource( 7 )
text = "Audio"
align = 1

[node name="Label" type="Label" parent="MarginContainer/Credits/Audio"]
margin_top = 28.0
margin_right = 240.0
margin_bottom = 150.0
custom_fonts/font = SubResource( 1 )
text = "jsalex7
Dissonant-Void
AddinSachen
Aleiocus
VGamer"
align = 1

[node name="Testers" type="VBoxContainer" parent="MarginContainer/Credits"]
margin_top = 2113.0
margin_right = 240.0
margin_bottom = 2263.0

[node name="Plank" type="TextureRect" parent="MarginContainer/Credits/Testers"]
margin_left = 67.0
margin_right = 172.0
margin_bottom = 24.0
size_flags_horizontal = 6
texture = ExtResource( 17 )

[node name="Label" type="Label" parent="MarginContainer/Credits/Testers/Plank"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -55.5
margin_top = -21.0
margin_right = 55.5
margin_bottom = 21.0
custom_colors/font_color = Color( 0.789075, 0.81, 0.5589, 1 )
custom_constants/line_spacing = -4
custom_fonts/font = SubResource( 7 )
text = "Testing and
Feedback"
align = 1

[node name="Label" type="Label" parent="MarginContainer/Credits/Testers"]
margin_top = 28.0
margin_right = 240.0
margin_bottom = 150.0
custom_fonts/font = SubResource( 1 )
text = "LavraSource
jsalex7
VGamer
Zappyz
devuan03"
align = 1

[node name="Final" type="RichTextLabel" parent="MarginContainer/Credits"]
margin_top = 2289.0
margin_right = 240.0
margin_bottom = 2449.0
custom_fonts/normal_font = SubResource( 6 )
bbcode_enabled = true
bbcode_text = "[center][rainbow freq=0.2 sat=1.9 val=10]p.s: keep your eyes peeled for a special surprise soon enough[/rainbow][/center]"
text = "p.s: keep your eyes peeled for a special surprise soon enough"
fit_content_height = true
scroll_active = false

[node name="Message" type="MarginContainer" parent="MarginContainer/Credits"]
margin_top = 2475.0
margin_right = 240.0
margin_bottom = 2605.0
custom_constants/margin_top = 130

[node name="Control" type="Control" parent="MarginContainer/Credits/Message"]
margin_top = 130.0
margin_right = 240.0
margin_bottom = 130.0

[node name="Button" type="TextureRect" parent="MarginContainer/Credits/Message/Control"]
margin_left = 14.0
margin_right = 225.0
margin_bottom = 186.0
size_flags_horizontal = 6
texture = ExtResource( 15 )

[node name="Message" type="Label" parent="MarginContainer/Credits/Message/Control"]
margin_top = 57.0
margin_right = 240.0
margin_bottom = 297.0
size_flags_vertical = 6
custom_fonts/font = SubResource( 9 )
text = "Thank you to all of you, who helped us to make this game real, and thanks to you, Saultoons, For the entertainment Youâ€™ve been giving us for so long.
Happy Milestone !!"
align = 1
autowrap = true

[node name="Back" parent="." instance=ExtResource( 4 )]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = 95.0
margin_top = 2522.0
margin_right = 159.0
margin_bottom = 2554.0
_text = "TO MENU"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "main"
reset_on_save = false
anims/RESET = SubResource( 3 )
anims/main = SubResource( 4 )

[node name="Music" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
autoplay = true

[node name="Camera2D" type="Camera2D" parent="."]
anchor_mode = 0
current = true

[connection signal="pressed" from="Back" to="." method="_on_back_pressed"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_finished"]
[connection signal="finished" from="Music" to="." method="_on_music_finished"]
